Fixed background image to remain fixed whilst scrolling and moved it to the base.css file, since it affects all pages. In addition, fixed an issue on the resume.html page, where grid items would overlap each other on smaller screens due to an oversight when arranging the grid span properties

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -19,14 +19,14 @@
     box-sizing: border-box;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 body {
-    background-color: #333;
+    background-color: #000;
     color: #fff;
     position: relative;
+    background-image: url("../images/background.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 header {
